# whyis_fediverse

./: .gitignore  README.md  pyproject.toml
script/: release
src/whyis_fediverse/: test_example.trig  vocab.ttl
src/whyis_fediverse/static/js/: comment.js  discussion.js  new_post.js  post.js  post_view.js  selectable.js  selections.js
src/whyis_fediverse/templates/: all_discussion.html  all_discussion.json  discussion.html  embed_image.html  embed_object.html  embed_resource.html  embed_video.html  image_embed.html  object_data.json  object_replies.json  object_view.html
whyis_fediverse/: plugin.py  test_example.ttl  vocab.ttl
whyis_fediverse/static/js/: post_view.js
whyis_fediverse/templates/: discussion.json  object_data.json  object_replies.json  object_view.html
